# coderev-codespaces

./: install.sh
client/: pyproject.toml
client/src/coderev/: api_client.py  auth.py  cli.py  codespace.py  config.py  tunnel.py
client/src/coderev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
server/: api_server.py
